// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PremiumPage matches snapshot when logged in with GitHub 1`] = `
<Fragment>
  <DocumentTitle
    title="Premium"
  />
  <div
    className="premium row"
  >
    <div
      className="col-md-4 col-sm-5"
    >
      <Connect(PremiumLoginPanel) />
    </div>
    <div
      className="col-md-8 col-sm-7"
    >
      <div
        className="panel"
      >
        <div
          className="panel-heading"
        >
          <h1>
            <Trans
              id="interface.premiumPage.premium"
              message="WoWAnalyzer premium"
            />
          </h1>
        </div>
        <div
          className="panel-body pad"
        >
          <Icon
            style={
              Object {
                "color": "#fab700",
                "float": "right",
                "fontSize": "6em",
                "marginTop": 0,
              }
            }
          />
          <div
            style={
              Object {
                "fontSize": "1.4em",
                "fontWeight": 400,
              }
            }
          >
            <Trans
              components={
                Object {
                  "0": <span
                    style={
                      Object {
                        "color": "#fab700",
                        "fontWeight": 700,
                      }
                    }
                  />,
                }
              }
              id="interface.premiumPage.premium.helpout"
              message="Help out development and unlock <0>WoWAnalyzer Premium</0>!"
            />
          </div>
          <div
            className="row"
            style={
              Object {
                "marginBottom": 5,
                "marginTop": 60,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              <Trans
                id="interface.premiumPage.howToUnlock"
                message="How to unlock WoWAnalyzer Premium:"
              />
            </div>
          </div>
          <div
            className="row flex"
          >
            <div
              className="col-md-6"
              style={
                Object {
                  "borderRight": "1px solid #aaa",
                }
              }
            >
              <Trans
                components={
                  Object {
                    "0": <h2 />,
                  }
                }
                id="interface.premiumPage.helpPatreon"
                message="<0>Patreon</0>Help fund further development by becoming a patron on Patreon."
              />
              <br />
              <br />
              <PatreonButton />
            </div>
            <div
              className="col-md-6"
            >
              <Trans
                components={
                  Object {
                    "0": <h2 />,
                    "1": <TooltipElement
                      className=""
                      content="{\\"id\\":\\"interface.premiumPage.githubTooltip\\",\\"message\\":\\"Only commits that are merged to the main branch are eligible. Your work will have to pass a pull request review before it can be merged.\\"}"
                      direction="down"
                      hoverable={false}
                      style={Object {}}
                      tooltipClassName=""
                    />,
                  }
                }
                id="interface.premiumPage.helpGitHub"
                message="<0>GitHub</0>Improve the analysis of a spec or build a new feature to get 1 month of Premium free<1>*</1>."
              />
              <br />
              <br />
              <GithubButton />
            </div>
          </div>
          <div
            className="row"
            style={
              Object {
                "marginTop": 15,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              <Trans
                id="interface.premiumPage.loginInstructions"
                message="After unlocking Premium, log in using the buttons to the left."
              />
            </div>
          </div>
          <div
            className="row"
            style={
              Object {
                "marginBottom": 5,
                "marginTop": 60,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              <Trans
                id="interface.premiumPage.unlocks"
                message="WoWAnalyzer Premium unlocks the following things:"
              />
            </div>
          </div>
          <div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <Trans
                  components={
                    Object {
                      "0": <h2 />,
                      "1": <strong />,
                    }
                  }
                  id="interface.premiumPage.unlocks.new"
                  message="<0>New things</0><1>Nothing develops itself.</1> Your contributions will help fund new things and improvements for the site, making it even better. You will also unlock additional features to help with your analysis."
                />
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <Trans
                  components={
                    Object {
                      "0": <h2 />,
                      "1": <strong />,
                    }
                  }
                  id="interface.premiumPage.unlocks.updates"
                  message="<0>Updates for patches</0><1>Updating for patches is a lot of work.</1> We need to apply all spell changes, add new traits, add support for the new fights, make screenshots, add fight phases, buffs and debuffs, etc. Your contributions make it possible for us to keep specs updated as they're changed in patches."
                />
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <Trans
                  components={
                    Object {
                      "0": <h2 />,
                      "1": <strong />,
                    }
                  }
                  id="interface.premiumPage.unlocks.noAds"
                  message="<0>No ads</0><1>Nobody likes them, but we need them.</1> Any contribution is worth more than the ads, so we'll remove ads from the platform for you so you can consume our content with less distractions and less clutter."
                />
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon
                  style={
                    Object {
                      "color": "#ff8000",
                    }
                  }
                />
              </div>
              <div
                className="flex-main"
              >
                <Trans
                  components={
                    Object {
                      "0": <h2 />,
                      "1": <strong />,
                    }
                  }
                  id="interface.premiumPage.unlocks.discord"
                  message="<0>Discord name color</0><1>We'll help anyone, but sometimes we can't avoid favoritism.</1> Get a distinct Discord name color befitting your contribution. See Patreon for Patron specific name colors. Serious GitHub contributors get the yellow contributor name color."
                />
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <Trans
                  components={
                    Object {
                      "0": <h2 />,
                      "1": <strong />,
                    }
                  }
                  id="interface.premiumPage.unlocks.discordChannels"
                  message="<0>Access to secret channels on Discord</0><1>You don't know what you're missing out on.</1> Get access to special Discord channels to discuss things privately in the sub-community."
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="panel"
      >
        <div
          className="panel-heading"
        >
          <h2>
            <Trans
              id="interface.premiumPage.you"
              message="You"
            />
          </h2>
        </div>
        <div
          className="panel-body pad"
        >
          <Trans
            id="interface.premiumPage.status"
            message="Hello {0}. Your Premium is currently {1} {2} {3}. {4}"
            values={
              Object {
                "0": "Martijn Hols",
                "1": <span
                  className="text-danger"
                >
                  {"id":"interface.premiumPage.status.inactive","message":"Inactive"}
                </span>,
                "2": undefined,
                "3": " {\\"id\\":\\"interface.premiumPage.status.gitHub\\",\\"message\\":\\"because of a recent GitHub contribution (active until {0})\\",\\"values\\":{\\"0\\":\\"Mon, 02 Jul 2018 11:48:40 GMT\\"}}",
                "4": "{\\"id\\":\\"interface.premiumPage.status.getPremium\\",\\"message\\":\\"You can get Premium by becoming a Patron on Patreon or by making a contribution to application on GitHub. Try logging in again if you wish to refresh your status.\\"}",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`PremiumPage matches snapshot when logged in with Patreon 1`] = `
<Fragment>
  <DocumentTitle
    title="Premium"
  />
  <div
    className="premium row"
  >
    <div
      className="col-md-4 col-sm-5"
    >
      <Connect(PremiumLoginPanel) />
    </div>
    <div
      className="col-md-8 col-sm-7"
    >
      <div
        className="panel"
      >
        <div
          className="panel-heading"
        >
          <h1>
            <Trans
              id="interface.premiumPage.premium"
              message="WoWAnalyzer premium"
            />
          </h1>
        </div>
        <div
          className="panel-body pad"
        >
          <Icon
            style={
              Object {
                "color": "#fab700",
                "float": "right",
                "fontSize": "6em",
                "marginTop": 0,
              }
            }
          />
          <div
            style={
              Object {
                "fontSize": "1.4em",
                "fontWeight": 400,
              }
            }
          >
            <Trans
              components={
                Object {
                  "0": <span
                    style={
                      Object {
                        "color": "#fab700",
                        "fontWeight": 700,
                      }
                    }
                  />,
                }
              }
              id="interface.premiumPage.premium.helpout"
              message="Help out development and unlock <0>WoWAnalyzer Premium</0>!"
            />
          </div>
          <div
            className="row"
            style={
              Object {
                "marginBottom": 5,
                "marginTop": 60,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              <Trans
                id="interface.premiumPage.howToUnlock"
                message="How to unlock WoWAnalyzer Premium:"
              />
            </div>
          </div>
          <div
            className="row flex"
          >
            <div
              className="col-md-6"
              style={
                Object {
                  "borderRight": "1px solid #aaa",
                }
              }
            >
              <Trans
                components={
                  Object {
                    "0": <h2 />,
                  }
                }
                id="interface.premiumPage.helpPatreon"
                message="<0>Patreon</0>Help fund further development by becoming a patron on Patreon."
              />
              <br />
              <br />
              <PatreonButton />
            </div>
            <div
              className="col-md-6"
            >
              <Trans
                components={
                  Object {
                    "0": <h2 />,
                    "1": <TooltipElement
                      className=""
                      content="{\\"id\\":\\"interface.premiumPage.githubTooltip\\",\\"message\\":\\"Only commits that are merged to the main branch are eligible. Your work will have to pass a pull request review before it can be merged.\\"}"
                      direction="down"
                      hoverable={false}
                      style={Object {}}
                      tooltipClassName=""
                    />,
                  }
                }
                id="interface.premiumPage.helpGitHub"
                message="<0>GitHub</0>Improve the analysis of a spec or build a new feature to get 1 month of Premium free<1>*</1>."
              />
              <br />
              <br />
              <GithubButton />
            </div>
          </div>
          <div
            className="row"
            style={
              Object {
                "marginTop": 15,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              <Trans
                id="interface.premiumPage.loginInstructions"
                message="After unlocking Premium, log in using the buttons to the left."
              />
            </div>
          </div>
          <div
            className="row"
            style={
              Object {
                "marginBottom": 5,
                "marginTop": 60,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              <Trans
                id="interface.premiumPage.unlocks"
                message="WoWAnalyzer Premium unlocks the following things:"
              />
            </div>
          </div>
          <div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <Trans
                  components={
                    Object {
                      "0": <h2 />,
                      "1": <strong />,
                    }
                  }
                  id="interface.premiumPage.unlocks.new"
                  message="<0>New things</0><1>Nothing develops itself.</1> Your contributions will help fund new things and improvements for the site, making it even better. You will also unlock additional features to help with your analysis."
                />
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <Trans
                  components={
                    Object {
                      "0": <h2 />,
                      "1": <strong />,
                    }
                  }
                  id="interface.premiumPage.unlocks.updates"
                  message="<0>Updates for patches</0><1>Updating for patches is a lot of work.</1> We need to apply all spell changes, add new traits, add support for the new fights, make screenshots, add fight phases, buffs and debuffs, etc. Your contributions make it possible for us to keep specs updated as they're changed in patches."
                />
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <Trans
                  components={
                    Object {
                      "0": <h2 />,
                      "1": <strong />,
                    }
                  }
                  id="interface.premiumPage.unlocks.noAds"
                  message="<0>No ads</0><1>Nobody likes them, but we need them.</1> Any contribution is worth more than the ads, so we'll remove ads from the platform for you so you can consume our content with less distractions and less clutter."
                />
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon
                  style={
                    Object {
                      "color": "#ff8000",
                    }
                  }
                />
              </div>
              <div
                className="flex-main"
              >
                <Trans
                  components={
                    Object {
                      "0": <h2 />,
                      "1": <strong />,
                    }
                  }
                  id="interface.premiumPage.unlocks.discord"
                  message="<0>Discord name color</0><1>We'll help anyone, but sometimes we can't avoid favoritism.</1> Get a distinct Discord name color befitting your contribution. See Patreon for Patron specific name colors. Serious GitHub contributors get the yellow contributor name color."
                />
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <Trans
                  components={
                    Object {
                      "0": <h2 />,
                      "1": <strong />,
                    }
                  }
                  id="interface.premiumPage.unlocks.discordChannels"
                  message="<0>Access to secret channels on Discord</0><1>You don't know what you're missing out on.</1> Get access to special Discord channels to discuss things privately in the sub-community."
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="panel"
      >
        <div
          className="panel-heading"
        >
          <h2>
            <Trans
              id="interface.premiumPage.you"
              message="You"
            />
          </h2>
        </div>
        <div
          className="panel-body pad"
        >
          <Trans
            id="interface.premiumPage.status"
            message="Hello {0}. Your Premium is currently {1} {2} {3}. {4}"
            values={
              Object {
                "0": "Martijn Hols",
                "1": <span
                  className="text-danger"
                >
                  {"id":"interface.premiumPage.status.inactive","message":"Inactive"}
                </span>,
                "2": " {\\"id\\":\\"interface.premiumPage.status.patreon\\",\\"message\\":\\"because of your Patreonage\\"}",
                "3": undefined,
                "4": "{\\"id\\":\\"interface.premiumPage.status.getPremium\\",\\"message\\":\\"You can get Premium by becoming a Patron on Patreon or by making a contribution to application on GitHub. Try logging in again if you wish to refresh your status.\\"}",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`PremiumPage matches snapshot when logged out 1`] = `
<Fragment>
  <DocumentTitle
    title="Premium"
  />
  <div
    className="premium row"
  >
    <div
      className="col-md-4 col-sm-5"
    >
      <Connect(PremiumLoginPanel) />
    </div>
    <div
      className="col-md-8 col-sm-7"
    >
      <div
        className="panel"
      >
        <div
          className="panel-heading"
        >
          <h1>
            <Trans
              id="interface.premiumPage.premium"
              message="WoWAnalyzer premium"
            />
          </h1>
        </div>
        <div
          className="panel-body pad"
        >
          <Icon
            style={
              Object {
                "color": "#fab700",
                "float": "right",
                "fontSize": "6em",
                "marginTop": 0,
              }
            }
          />
          <div
            style={
              Object {
                "fontSize": "1.4em",
                "fontWeight": 400,
              }
            }
          >
            <Trans
              components={
                Object {
                  "0": <span
                    style={
                      Object {
                        "color": "#fab700",
                        "fontWeight": 700,
                      }
                    }
                  />,
                }
              }
              id="interface.premiumPage.premium.helpout"
              message="Help out development and unlock <0>WoWAnalyzer Premium</0>!"
            />
          </div>
          <div
            className="row"
            style={
              Object {
                "marginBottom": 5,
                "marginTop": 60,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              <Trans
                id="interface.premiumPage.howToUnlock"
                message="How to unlock WoWAnalyzer Premium:"
              />
            </div>
          </div>
          <div
            className="row flex"
          >
            <div
              className="col-md-6"
              style={
                Object {
                  "borderRight": "1px solid #aaa",
                }
              }
            >
              <Trans
                components={
                  Object {
                    "0": <h2 />,
                  }
                }
                id="interface.premiumPage.helpPatreon"
                message="<0>Patreon</0>Help fund further development by becoming a patron on Patreon."
              />
              <br />
              <br />
              <PatreonButton />
            </div>
            <div
              className="col-md-6"
            >
              <Trans
                components={
                  Object {
                    "0": <h2 />,
                    "1": <TooltipElement
                      className=""
                      content="{\\"id\\":\\"interface.premiumPage.githubTooltip\\",\\"message\\":\\"Only commits that are merged to the main branch are eligible. Your work will have to pass a pull request review before it can be merged.\\"}"
                      direction="down"
                      hoverable={false}
                      style={Object {}}
                      tooltipClassName=""
                    />,
                  }
                }
                id="interface.premiumPage.helpGitHub"
                message="<0>GitHub</0>Improve the analysis of a spec or build a new feature to get 1 month of Premium free<1>*</1>."
              />
              <br />
              <br />
              <GithubButton />
            </div>
          </div>
          <div
            className="row"
            style={
              Object {
                "marginTop": 15,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              <Trans
                id="interface.premiumPage.loginInstructions"
                message="After unlocking Premium, log in using the buttons to the left."
              />
            </div>
          </div>
          <div
            className="row"
            style={
              Object {
                "marginBottom": 5,
                "marginTop": 60,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              <Trans
                id="interface.premiumPage.unlocks"
                message="WoWAnalyzer Premium unlocks the following things:"
              />
            </div>
          </div>
          <div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <Trans
                  components={
                    Object {
                      "0": <h2 />,
                      "1": <strong />,
                    }
                  }
                  id="interface.premiumPage.unlocks.new"
                  message="<0>New things</0><1>Nothing develops itself.</1> Your contributions will help fund new things and improvements for the site, making it even better. You will also unlock additional features to help with your analysis."
                />
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <Trans
                  components={
                    Object {
                      "0": <h2 />,
                      "1": <strong />,
                    }
                  }
                  id="interface.premiumPage.unlocks.updates"
                  message="<0>Updates for patches</0><1>Updating for patches is a lot of work.</1> We need to apply all spell changes, add new traits, add support for the new fights, make screenshots, add fight phases, buffs and debuffs, etc. Your contributions make it possible for us to keep specs updated as they're changed in patches."
                />
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <Trans
                  components={
                    Object {
                      "0": <h2 />,
                      "1": <strong />,
                    }
                  }
                  id="interface.premiumPage.unlocks.noAds"
                  message="<0>No ads</0><1>Nobody likes them, but we need them.</1> Any contribution is worth more than the ads, so we'll remove ads from the platform for you so you can consume our content with less distractions and less clutter."
                />
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon
                  style={
                    Object {
                      "color": "#ff8000",
                    }
                  }
                />
              </div>
              <div
                className="flex-main"
              >
                <Trans
                  components={
                    Object {
                      "0": <h2 />,
                      "1": <strong />,
                    }
                  }
                  id="interface.premiumPage.unlocks.discord"
                  message="<0>Discord name color</0><1>We'll help anyone, but sometimes we can't avoid favoritism.</1> Get a distinct Discord name color befitting your contribution. See Patreon for Patron specific name colors. Serious GitHub contributors get the yellow contributor name color."
                />
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <Trans
                  components={
                    Object {
                      "0": <h2 />,
                      "1": <strong />,
                    }
                  }
                  id="interface.premiumPage.unlocks.discordChannels"
                  message="<0>Access to secret channels on Discord</0><1>You don't know what you're missing out on.</1> Get access to special Discord channels to discuss things privately in the sub-community."
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;
